[package]
name = "bevy_bench"
version = "0.1.0"
authors = ["ElliotB256"]
edition = "2018"

[dependencies]
bevy = "0.5"
nalgebra = "0.26"
specs = { git="https://github.com/amethyst/specs.git", rev="1a113a8"}

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[patch.crates-io]
bevy = { path = 'C:/code/bevy' }