[package]
name = "bevy_bench"
version = "0.1.0"
authors = ["ElliotB256"]
edition = "2018"

[dependencies]
bevy_ecs = "0.5"
bevy_tasks = "0.5"
nalgebra = "0.26"
rayon = "1.5.0"
specs = { git="https://github.com/amethyst/specs.git", rev="1a113a8", features=["rayon"]}

[profile.release]
opt-level = 3
debug = true
rpath = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

[patch.crates-io]
bevy_ecs = { path = '../bevy/crates/bevy_ecs' }
bevy_tasks = { path = '../bevy/crates/bevy_tasks' }